tests/Core/positive/test019.jvc
-- self-application

(\x x x) (\x x) (3 + 4)
