tests/Core/negative/test007.jvc
-- invalid builtin application

(+ 2 3 4)
